TileSync and RowSync takes TileSize values

--- a/src/ml-bench/volta_transformer/results/mlp-results-gpt3-cuda-12.2
+++ b/src/ml-bench/volta_transformer/results/mlp-results-gpt3-cuda-12.2
@@ -153,24 +153,24 @@ With GeLU on V100 SMX-2
 
 
 Fixing TileSync to require TileOrder
-1 & 12288 & baseline & 388.72 & 2.76 & 203.06 & 185.56
-1 & 12288 & rowsync & 388.72 & 2.76 & 203.06 & 185.56 & 359.33 & 1.64 & 7.56
-1 & 12288 & tilesync & 388.72 & 2.76 & 203.06 & 185.56 & 370.11 & 1.71 & 4.79
-2 & 12288 & baseline & 388.61 & 2.64 & 202.50 & 186.11
-2 & 12288 & rowsync & 388.61 & 2.64 & 202.50 & 186.11 & 356.17 & 1.25 & 8.35
-2 & 12288 & tilesync & 388.61 & 2.64 & 202.50 & 186.11 & 370.11 & 1.71 & 4.76
-4 & 12288 & baseline & 389.39 & 2.30 & 203.56 & 185.78
-4 & 12288 & rowsync & 389.39 & 2.30 & 203.56 & 185.78 & 360.11 & 1.18 & 7.52
-4 & 12288 & tilesync & 389.39 & 2.30 & 203.56 & 185.78 & 369.56 & 2.20 & 5.09
-8 & 12288 & baseline & 390.50 & 1.38 & 203.72 & 186.72
-8 & 12288 & rowsync & 390.50 & 1.38 & 203.72 & 186.72 & 361.06 & 1.30 & 7.54
-8 & 12288 & tilesync & 390.50 & 1.38 & 203.72 & 186.72 & 370.39 & 1.82 & 5.15
-16 & 12288 & baseline & 395.94 & 3.21 & 206.06 & 189.89
-16 & 12288 & rowsync & 395.94 & 3.21 & 206.06 & 189.89 & 363.72 & 1.56 & 8.14
-16 & 12288 & tilesync & 395.94 & 3.21 & 206.06 & 189.89 & 376.11 & 1.53 & 5.01
-32 & 12288 & baseline & 391.61 & 1.72 & 204.94 & 186.67
-32 & 12288 & rowsync & 391.61 & 1.72 & 204.94 & 186.67 & 366.28 & 1.49 & 6.47
-32 & 12288 & tilesync & 391.61 & 1.72 & 204.94 & 186.67 & 380.61 & 2.15 & 2.81
+1 & 12288 & baseline & 381.72 & 1.41 & 198.28 & 183.44
+1 & 12288 & rowsync & 381.72 & 1.41 & 198.28 & 183.44 & 351.33 & 0.97 & 7.96
+1 & 12288 & tilesync & 381.72 & 1.41 & 198.28 & 183.44 & 361.06 & 1.95 & 5.41
+2 & 12288 & baseline & 382.06 & 2.15 & 198.56 & 183.44
+2 & 12288 & rowsync & 382.06 & 2.15 & 198.56 & 183.44 & 351.11 & 1.18 & 8.10
+2 & 12288 & tilesync & 382.06 & 2.15 & 198.56 & 183.44 & 361.22 & 2.26 & 5.45
+4 & 12288 & baseline & 384.06 & 1.80 & 198.89 & 185.11
+4 & 12288 & rowsync & 384.06 & 1.80 & 198.89 & 185.11 & 353.78 & 1.40 & 7.88
+4 & 12288 & tilesync & 384.06 & 1.80 & 198.89 & 185.11 & 361.61 & 1.94 & 5.84
+8 & 12288 & baseline & 383.89 & 1.94 & 200.50 & 183.39
+8 & 12288 & rowsync & 383.89 & 1.94 & 200.50 & 183.39 & 353.78 & 1.06 & 7.84
+8 & 12288 & tilesync & 383.89 & 1.94 & 200.50 & 183.39 & 364.22 & 2.13 & 5.12
+16 & 12288 & baseline & 385.39 & 1.24 & 201.22 & 184.17
+16 & 12288 & rowsync & 385.39 & 1.24 & 201.22 & 184.17 & 356.11 & 1.08 & 7.60
+16 & 12288 & tilesync & 385.39 & 1.24 & 201.22 & 184.17 & 366.28 & 1.84 & 4.96
+32 & 12288 & baseline & 392.39 & 1.72 & 206.56 & 185.78
+32 & 12288 & rowsync & 392.39 & 1.72 & 206.56 & 185.78 & 361.89 & 1.23 & 7.77
+32 & 12288 & tilesync & 392.39 & 1.72 & 206.56 & 185.78 & 373.61 & 1.65 & 4.79
 64 & 12288 & baseline & 414.33 & 1.57 & 220.56 & 193.72
 64 & 12288 & rowsync & 414.33 & 1.57 & 220.56 & 193.72 & 384.83 & 1.50 & 7.12
 64 & 12288 & tilesync & 414.33 & 1.57 & 220.56 & 193.72 & 398.89 & 2.19 & 3.73
@@ -189,4 +189,83 @@ Fixing TileSync to require TileOrder
 2048 & 12288 & baseline & 3726.89 & 13.15 & 1921.28 & 1805.61
 2048 & 12288 & rowsync & 3726.89 & 13.15 & 1921.28 & 1805.61 & 3585.33 & 91.09 & 3.80
 2048 & 12288 & tilesync & 3726.89 & 13.15 & 1921.28 & 1805.61 & 3499.28 & 43.32 & 6.11
+
+
+
+1 & 12288 & baseline & 381.39 & 2.25 & 198.17 & 183.17
+1 & 12288 & rowsync & 381.39 & 2.25 & 198.17 & 183.17 & 370.28 & 1.02 & 2.91
+1 & 12288 & tilesync & 381.39 & 2.25 & 198.17 & 183.17 & 362.61 & 2.09 & 4.92
+2 & 12288 & baseline & 382.61 & 1.50 & 198.56 & 184.00
+2 & 12288 & rowsync & 382.61 & 1.50 & 198.56 & 184.00 & 371.33 & 1.78 & 2.95
+2 & 12288 & tilesync & 382.61 & 1.50 & 198.56 & 184.00 & 363.28 & 1.41 & 5.05
+4 & 12288 & baseline & 382.50 & 1.62 & 198.67 & 183.78
+4 & 12288 & rowsync & 382.50 & 1.62 & 198.67 & 183.78 & 371.78 & 2.10 & 2.80
+4 & 12288 & tilesync & 382.50 & 1.62 & 198.67 & 183.78 & 364.11 & 1.23 & 4.81
+8 & 12288 & baseline & 383.50 & 1.65 & 199.56 & 183.89
+8 & 12288 & rowsync & 383.50 & 1.65 & 199.56 & 183.89 & 373.44 & 1.58 & 2.62
+8 & 12288 & tilesync & 383.50 & 1.65 & 199.56 & 183.89 & 365.72 & 2.16 & 4.64
+16 & 12288 & baseline & 386.22 & 1.90 & 202.06 & 184.11
+16 & 12288 & rowsync & 386.22 & 1.90 & 202.06 & 184.11 & 375.00 & 2.09 & 2.91
+16 & 12288 & tilesync & 386.22 & 1.90 & 202.06 & 184.11 & 369.72 & 1.36 & 4.27
+32 & 12288 & baseline & 391.67 & 1.61 & 205.61 & 186.00
+32 & 12288 & rowsync & 391.67 & 1.61 & 205.61 & 186.00 & 381.06 & 1.70 & 2.71
+32 & 12288 & tilesync & 391.67 & 1.61 & 205.61 & 186.00 & 375.67 & 1.94 & 4.09
+64 & 12288 & baseline & 414.83 & 1.69 & 221.06 & 193.78
+64 & 12288 & rowsync & 414.83 & 1.69 & 221.06 & 193.78 & 402.78 & 1.11 & 2.91
+64 & 12288 & tilesync & 414.83 & 1.69 & 221.06 & 193.78 & 402.56 & 1.89 & 2.96
+128 & 12288 & baseline & 533.94 & 3.47 & 307.44 & 226.44
+128 & 12288 & rowsync & 533.94 & 3.47 & 307.44 & 226.44 & 519.44 & 2.91 & 2.72
+128 & 12288 & tilesync & 533.94 & 3.47 & 307.44 & 226.44 & 511.39 & 2.89 & 4.22
+256 & 12288 & baseline & 840.89 & 2.25 & 439.22 & 401.67
+256 & 12288 & rowsync & 840.89 & 2.25 & 439.22 & 401.67 & 841.17 & 10.71 & -0.03
+256 & 12288 & tilesync & 840.89 & 2.25 & 439.22 & 401.67 & 764.33 & 4.50 & 9.10
+512 & 12288 & baseline & 1499.06 & 11.38 & 779.39 & 719.67
+512 & 12288 & rowsync & 1499.06 & 11.38 & 779.39 & 719.67 & 1166.56 & 7.95 & 22.18
+512 & 12288 & tilesync & 1499.06 & 11.38 & 779.39 & 719.67 & 1394.83 & 5.74 & 6.95
+1024 & 12288 & baseline & 2109.83 & 10.85 & 1081.39 & 1028.44
+1024 & 12288 & rowsync & 2109.83 & 10.85 & 1081.39 & 1028.44 & 1912.33 & 13.15 & 9.36
+1024 & 12288 & tilesync & 2109.83 & 10.85 & 1081.39 & 1028.44 & 2346.17 & 5.04 & -11.20
+2048 & 12288 & baseline & 3723.72 & 12.15 & 1917.67 & 1806.06
+2048 & 12288 & rowsync & 3723.72 & 12.15 & 1917.67 & 1806.06 & 3556.22 & 16.57 & 4.50
+2048 & 12288 & tilesync & 3723.72 & 12.15 & 1917.67 & 1806.06 & 4476.11 & 11.46 & -20.21
+
+
+
+Different TileSizes for both GeMMs
+1 & 12288 & baseline & 378.28 & 2.19 & 196.56 & 181.72
+1 & 12288 & rowsync & 378.28 & 2.19 & 196.56 & 181.72 & 371.22 & 1.99 & 1.87
+1 & 12288 & tilesync & 378.28 & 2.19 & 196.56 & 181.72 & 360.28 & 1.99 & 4.76
+2 & 12288 & baseline & 379.78 & 2.18 & 197.61 & 182.11
+2 & 12288 & rowsync & 379.78 & 2.18 & 197.61 & 182.11 & 371.89 & 1.71 & 2.08
+2 & 12288 & tilesync & 379.78 & 2.18 & 197.61 & 182.11 & 360.11 & 2.17 & 5.18
+4 & 12288 & baseline & 379.94 & 1.98 & 197.39 & 182.56
+4 & 12288 & rowsync & 379.94 & 1.98 & 197.39 & 182.56 & 372.06 & 1.76 & 2.08
+4 & 12288 & tilesync & 379.94 & 1.98 & 197.39 & 182.56 & 361.83 & 2.09 & 4.77
+8 & 12288 & baseline & 383.17 & 1.95 & 199.22 & 183.89
+8 & 12288 & rowsync & 383.17 & 1.95 & 199.22 & 183.89 & 373.78 & 1.83 & 2.45
+8 & 12288 & tilesync & 383.17 & 1.95 & 199.22 & 183.89 & 362.61 & 2.64 & 5.36
+16 & 12288 & baseline & 385.61 & 2.50 & 200.61 & 185.00
+16 & 12288 & rowsync & 385.61 & 2.50 & 200.61 & 185.00 & 377.67 & 1.85 & 2.06
+16 & 12288 & tilesync & 385.61 & 2.50 & 200.61 & 185.00 & 366.89 & 1.57 & 4.86
+32 & 12288 & baseline & 394.11 & 1.57 & 205.11 & 189.00
+32 & 12288 & rowsync & 394.11 & 1.57 & 205.11 & 189.00 & 384.50 & 1.65 & 2.44
+32 & 12288 & tilesync & 394.11 & 1.57 & 205.11 & 189.00 & 373.50 & 1.29 & 5.23
+64 & 12288 & baseline & 412.28 & 1.99 & 219.72 & 192.50
+64 & 12288 & rowsync & 412.28 & 1.99 & 219.72 & 192.50 & 402.89 & 1.37 & 2.28
+64 & 12288 & tilesync & 412.28 & 1.99 & 219.72 & 192.50 & 402.67 & 1.78 & 2.33
+128 & 12288 & baseline & 530.11 & 4.10 & 305.67 & 224.39
+128 & 12288 & rowsync & 530.11 & 4.10 & 305.67 & 224.39 & 519.44 & 1.92 & 2.01
+128 & 12288 & tilesync & 530.11 & 4.10 & 305.67 & 224.39 & 523.17 & 3.67 & 1.31
+256 & 12288 & baseline & 862.28 & 1.90 & 449.72 & 412.56
+256 & 12288 & rowsync & 862.28 & 1.90 & 449.72 & 412.56 & 830.33 & 1.71 & 3.70
+256 & 12288 & tilesync & 862.28 & 1.90 & 449.72 & 412.56 & 728.89 & 4.38 & 15.47
+512 & 12288 & baseline & 1500.50 & 9.41 & 781.33 & 719.17
+512 & 12288 & rowsync & 1500.50 & 9.41 & 781.33 & 719.17 & 1203.22 & 6.49 & 19.81
+512 & 12288 & tilesync & 1500.50 & 9.41 & 781.33 & 719.17 & 1196.44 & 4.87 & 20.26
+1024 & 12288 & baseline & 2111.06 & 12.75 & 1086.61 & 1024.44
+1024 & 12288 & rowsync & 2111.06 & 12.75 & 1086.61 & 1024.44 & 1922.06 & 16.41 & 8.95
+1024 & 12288 & tilesync & 2111.06 & 12.75 & 1086.61 & 1024.44 & 1901.56 & 16.53 & 9.92
+2048 & 12288 & baseline & 3730.50 & 19.61 & 1920.33 & 1810.17
+2048 & 12288 & rowsync & 3730.50 & 19.61 & 1920.33 & 1810.17 & 3574.28 & 64.30 & 4.19
+2048 & 12288 & tilesync & 3730.50 & 19.61 & 1920.33 & 1810.17 & 3657.61 & 11.35 & 1.95
 
