--- a/src/ml-bench/volta_transformer/results/attention-results-gpt-3-cuda-12.2
+++ b/src/ml-bench/volta_transformer/results/attention-results-gpt-3-cuda-12.2
@@ -74,3 +74,21 @@
 4 & 12288 & baseline & 290.28 & 1.71 & 145.67 & 50.72
 4 & 12288 & rowsync & 290.28 & 1.71 & 145.67 & 50.72 & 274.50 & 3.24 & 5.44
 4 & 12288 & tilesync & 290.28 & 1.71 & 145.67 & 50.72 & 268.22 & 2.60 & 7.60
+
+Attention branch
+256 & 0& 12288 & baseline & 581.94 & 9.07 & 353.89 & 44.11
+256 & 0& 12288 & rowsync & 581.94 & 9.07 & 353.89 & 44.11 & 591.67 & 11.59 & -1.67
+256 & 0& 12288 & tilesync & 581.94 & 9.07 & 353.89 & 44.11 & 491.83 & 4.53 & 15.48
+256 & 0& 12288 & stridedsync & 581.94 & 9.07 & 353.89 & 44.11 & 492.39 & 2.62 & 15.39
+512 & 0& 12288 & baseline & 809.44 & 3.54 & 488.06 & 63.28
+512 & 0& 12288 & rowsync & 809.44 & 3.54 & 488.06 & 63.28 & 809.06 & 11.19 & 0.05
+512 & 0& 12288 & tilesync & 809.44 & 3.54 & 488.06 & 63.28 & 648.44 & 4.26 & 19.89
+512 & 0& 12288 & stridedsync & 809.44 & 3.54 & 488.06 & 63.28 & 713.44 & 4.33 & 11.86
+1024 & 0& 12288 & baseline & 1364.11 & 14.04 & 869.28 & 75.33
+1024 & 0& 12288 & rowsync & 1364.11 & 14.04 & 869.28 & 75.33 & 1334.00 & 4.50 & 2.21
+1024 & 0& 12288 & tilesync & 1364.11 & 14.04 & 869.28 & 75.33 & 1110.33 & 3.69 & 18.60
+1024 & 0& 12288 & stridedsync & 1364.11 & 14.04 & 869.28 & 75.33 & 1103.39 & 5.99 & 19.11
+2048 & 0& 12288 & baseline & 2334.00 & 10.20 & 1485.89 & 148.44
+2048 & 0& 12288 & rowsync & 2334.00 & 10.20 & 1485.89 & 148.44 & 2367.67 & 35.49 & -1.44
+2048 & 0& 12288 & tilesync & 2334.00 & 10.20 & 1485.89 & 148.44 & 2335.11 & 27.27 & -0.05
+2048 & 0& 12288 & stridedsync & 2334.00 & 10.20 & 1485.89 & 148.44 & 2305.56 & 29.16 & 1.22
