--- a/src/ml-bench/volta_transformer/results/attention-results-gpt-3-cuda-12.2
+++ b/src/ml-bench/volta_transformer/results/attention-results-gpt-3-cuda-12.2
@@ -92,3 +92,37 @@ Attention branch
 2048 & 0& 12288 & rowsync & 2334.00 & 10.20 & 1485.89 & 148.44 & 2367.67 & 35.49 & -1.44
 2048 & 0& 12288 & tilesync & 2334.00 & 10.20 & 1485.89 & 148.44 & 2335.11 & 27.27 & -0.05
 2048 & 0& 12288 & stridedsync & 2334.00 & 10.20 & 1485.89 & 148.44 & 2305.56 & 29.16 & 1.22
+
+Updated Attention results
+256 & 12288 & baseline & 585.50 & 10.13 & 354.44 & 44.72
+256 & 12288 & rowsync & 585.50 & 10.13 & 354.44 & 44.72 & 568.61 & 13.29 & 2.88
+256 & 12288 & tilesync & 585.50 & 10.13 & 354.44 & 44.72 & 585.94 & 11.49 & -0.08
+256 & 12288 & stridedsync & 585.50 & 10.13 & 354.44 & 44.72 & 571.06 & 14.13 & 2.47
+512 & 12288 & baseline & 698.11 & 2.08 & 418.17 & 43.33
+512 & 12288 & rowsync & 698.11 & 2.08 & 418.17 & 43.33 & 680.61 & 2.57 & 2.51
+512 & 12288 & tilesync & 698.11 & 2.08 & 418.17 & 43.33 & 711.61 & 3.22 & -1.93
+512 & 12288 & stridedsync & 698.11 & 2.08 & 418.17 & 43.33 & 625.94 & 2.01 & 10.34
+1024 & 12288 & baseline & 1268.44 & 2.06 & 777.67 & 91.67
+1024 & 12288 & rowsync & 1268.44 & 2.06 & 777.67 & 91.67 & 1091.33 & 2.35 & 13.96
+1024 & 12288 & tilesync & 1268.44 & 2.06 & 777.67 & 91.67 & 1130.00 & 3.20 & 10.91
+1024 & 12288 & stridedsync & 1268.44 & 2.06 & 777.67 & 91.67 & 1081.44 & 2.18 & 14.74
+2048 & 12288 & baseline & 2372.72 & 1.84 & 1369.39 & 258.11
+2048 & 12288 & rowsync & 2372.72 & 1.84 & 1369.39 & 258.11 & 2035.83 & 2.33 & 14.20
+2048 & 12288 & tilesync & 2372.72 & 1.84 & 1369.39 & 258.11 & 2036.61 & 6.16 & 14.17
+2048 & 12288 & stridedsync & 2372.72 & 1.84 & 1369.39 & 258.11 & 1994.67 & 3.25 & 15.93
+1 & 12288 & baseline & 259.28 & 0.96 & 142.17 & 40.39
+1 & 12288 & rowsync & 259.28 & 0.96 & 142.17 & 40.39 & 240.78 & 1.48 & 7.14
+1 & 12288 & tilesync & 259.28 & 0.96 & 142.17 & 40.39 & 253.22 & 3.19 & 2.34
+1 & 12288 & stridedsync & 259.28 & 0.96 & 142.17 & 40.39 & 253.11 & 1.23 & 2.38
+4 & 12288 & baseline & 271.33 & 1.14 & 145.61 & 44.72
+4 & 12288 & rowsync & 271.33 & 1.14 & 145.61 & 44.72 & 253.33 & 1.88 & 6.63
+4 & 12288 & tilesync & 271.33 & 1.14 & 145.61 & 44.72 & 254.50 & 2.73 & 6.20
+4 & 12288 & stridedsync & 271.33 & 1.14 & 145.61 & 44.72 & 255.06 & 1.43 & 6.00
+1 & 12288 & baseline & 291.61 & 1.54 & 146.56 & 50.78
+1 & 12288 & rowsync & 291.61 & 1.54 & 146.56 & 50.78 & 274.17 & 3.49 & 5.98
+1 & 12288 & tilesync & 291.61 & 1.54 & 146.56 & 50.78 & 268.94 & 1.80 & 7.77
+1 & 12288 & stridedsync & 291.61 & 1.54 & 146.56 & 50.78 & 270.50 & 2.26 & 7.24
+4 & 12288 & baseline & 291.61 & 1.20 & 146.06 & 50.83
+4 & 12288 & rowsync & 291.61 & 1.20 & 146.06 & 50.83 & 276.28 & 2.16 & 5.26
+4 & 12288 & tilesync & 291.61 & 1.20 & 146.06 & 50.83 & 270.17 & 3.01 & 7.35
+4 & 12288 & stridedsync & 291.61 & 1.20 & 146.06 & 50.83 & 273.72 & 2.82 & 6.13
